# serializer version: 1
# name: TestActionApi.test_listing_actions_is_not_nplus1
  '''
  SELECT "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."credentials_reviewed_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."mascot_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."hide_mcp_hints",
         "insights_user"."onboarding_skipped_at",
         "insights_user"."onboarding_skipped_reason",
         "insights_user"."onboarding_skipped_organization_id",
         "insights_user"."onboarding_delegated_to_invite_id",
         "insights_user"."onboarding_delegated_to_organization_id",
         "insights_user"."onboarding_delegation_accepted_at",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in"
  FROM "insights_user"
  WHERE ("insights_user"."is_active"
         AND "insights_user"."id" = 99999)
  '''
# ---
# name: TestActionApi.test_listing_actions_is_not_nplus1.1
  '''
  SELECT "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."is_ai_training_opted_in",
         "insights_organization"."is_ai_training_locked",
         "insights_organization"."is_ai_training_cta_shown",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."is_pending_deletion",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_organization"
  WHERE "insights_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestActionApi.test_listing_actions_is_not_nplus1.10
  '''
  SELECT "insights_team"."id",
         "insights_team"."uuid",
         "insights_team"."organization_id",
         "insights_team"."parent_team_id",
         "insights_team"."project_id",
         "insights_team"."api_token",
         "insights_team"."app_urls",
         "insights_team"."name",
         "insights_team"."slack_incoming_webhook",
         "insights_team"."created_at",
         "insights_team"."updated_at",
         "insights_team"."anonymize_ips",
         "insights_team"."completed_snippet_onboarding",
         "insights_team"."has_completed_onboarding_for",
         "insights_team"."onboarding_tasks",
         "insights_team"."ingested_event",
         "insights_team"."person_processing_opt_out",
         "insights_team"."secret_api_token",
         "insights_team"."secret_api_token_backup",
         "insights_team"."session_recording_opt_in",
         "insights_team"."session_recording_sample_rate",
         "insights_team"."session_recording_minimum_duration_milliseconds",
         "insights_team"."session_recording_linked_flag",
         "insights_team"."session_recording_network_payload_capture_config",
         "insights_team"."session_recording_masking_config",
         "insights_team"."session_recording_url_trigger_config",
         "insights_team"."session_recording_url_blocklist_config",
         "insights_team"."session_recording_event_trigger_config",
         "insights_team"."session_recording_trigger_match_type_config",
         "insights_team"."session_recording_trigger_groups",
         "insights_team"."session_replay_config",
         "insights_team"."session_recording_retention_period",
         "insights_team"."conversations_enabled",
         "insights_team"."conversations_settings",
         "insights_team"."proactive_tasks_enabled",
         "insights_team"."survey_config",
         "insights_team"."surveys_opt_in",
         "insights_team"."product_tours_opt_in",
         "insights_team"."capture_console_log_opt_in",
         "insights_team"."capture_performance_opt_in",
         "insights_team"."capture_dead_clicks",
         "insights_team"."autocapture_opt_out",
         "insights_team"."autocapture_web_vitals_opt_in",
         "insights_team"."autocapture_web_vitals_allowed_metrics",
         "insights_team"."autocapture_exceptions_opt_in",
         "insights_team"."autocapture_exceptions_errors_to_ignore",
         "insights_team"."logs_settings",
         "insights_team"."heatmaps_opt_in",
         "insights_team"."receive_org_level_activity_logs",
         "insights_team"."web_analytics_pre_aggregated_tables_enabled",
         "insights_team"."web_analytics_pre_aggregated_tables_version",
         "insights_team"."flags_persistence_default",
         "insights_team"."feature_flag_confirmation_enabled",
         "insights_team"."feature_flag_confirmation_message",
         "insights_team"."default_evaluation_environments_enabled",
         "insights_team"."require_evaluation_environment_tags",
         "insights_team"."default_evaluation_contexts_enabled",
         "insights_team"."require_evaluation_contexts",
         "insights_team"."session_recording_version",
         "insights_team"."signup_token",
         "insights_team"."is_demo",
         "insights_team"."access_control",
         "insights_team"."week_start_day",
         "insights_team"."inject_web_apps",
         "insights_team"."test_account_filters",
         "insights_team"."test_account_filters_default_checked",
         "insights_team"."path_cleaning_filters",
         "insights_team"."timezone",
         "insights_team"."data_attributes",
         "insights_team"."person_display_name_properties",
         "insights_team"."live_events_columns",
         "insights_team"."recording_domains",
         "insights_team"."human_friendly_comparison_periods",
         "insights_team"."cookieless_server_hash_mode",
         "insights_team"."primary_dashboard_id",
         "insights_team"."default_data_theme",
         "insights_team"."extra_settings",
         "insights_team"."modifiers",
         "insights_team"."correlation_config",
         "insights_team"."session_recording_retention_period_days",
         "insights_team"."external_data_workspace_id",
         "insights_team"."external_data_workspace_last_synced_at",
         "insights_team"."api_query_rate_limit",
         "insights_team"."drop_events_older_than",
         "insights_team"."base_currency",
         "insights_team"."experiment_recalculation_time",
         "insights_team"."default_experiment_confidence_level",
         "insights_team"."default_experiment_stats_method",
         "insights_team"."business_model",
         "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."is_ai_training_opted_in",
         "insights_organization"."is_ai_training_locked",
         "insights_organization"."is_ai_training_cta_shown",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."is_pending_deletion",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_team"
  INNER JOIN "insights_organization" ON ("insights_team"."organization_id" = "insights_organization"."id")
  WHERE "insights_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestActionApi.test_listing_actions_is_not_nplus1.11
  '''
  SELECT "insights_project"."id",
         "insights_project"."organization_id",
         "insights_project"."name",
         "insights_project"."created_at",
         "insights_project"."product_description"
  FROM "insights_project"
  WHERE "insights_project"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestActionApi.test_listing_actions_is_not_nplus1.12
  '''
  SELECT "insights_organizationmembership"."id",
         "insights_organizationmembership"."organization_id",
         "insights_organizationmembership"."user_id",
         "insights_organizationmembership"."level",
         "insights_organizationmembership"."joined_at",
         "insights_organizationmembership"."updated_at",
         "insights_organizationmembership"."invited_by_id",
         "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."is_ai_training_opted_in",
         "insights_organization"."is_ai_training_locked",
         "insights_organization"."is_ai_training_cta_shown",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."is_pending_deletion",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_organizationmembership"
  INNER JOIN "insights_organization" ON ("insights_organizationmembership"."organization_id" = "insights_organization"."id")
  WHERE ("insights_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "insights_organizationmembership"."user_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestActionApi.test_listing_actions_is_not_nplus1.13
  '''
  SELECT "ee_accesscontrol"."id",
         "ee_accesscontrol"."team_id",
         "ee_accesscontrol"."access_level",
         "ee_accesscontrol"."resource",
         "ee_accesscontrol"."resource_id",
         "ee_accesscontrol"."organization_member_id",
         "ee_accesscontrol"."role_id",
         "ee_accesscontrol"."created_by_id",
         "ee_accesscontrol"."created_at",
         "ee_accesscontrol"."updated_at"
  FROM "ee_accesscontrol"
  LEFT OUTER JOIN "insights_organizationmembership" ON ("ee_accesscontrol"."organization_member_id" = "insights_organizationmembership"."id")
  WHERE (("ee_accesscontrol"."organization_member_id" IS NULL
          AND "ee_accesscontrol"."resource" = 'project'
          AND "ee_accesscontrol"."resource_id" = '99999'
          AND "ee_accesscontrol"."role_id" IS NULL
          AND "ee_accesscontrol"."team_id" = 99999)
         OR ("insights_organizationmembership"."user_id" = 99999
             AND "ee_accesscontrol"."resource" = 'project'
             AND "ee_accesscontrol"."resource_id" = '99999'
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999)
         OR ("ee_accesscontrol"."organization_member_id" IS NULL
             AND "ee_accesscontrol"."resource" = 'action'
             AND "ee_accesscontrol"."resource_id" IS NULL
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999)
         OR ("insights_organizationmembership"."user_id" = 99999
             AND "ee_accesscontrol"."resource" = 'action'
             AND "ee_accesscontrol"."resource_id" IS NULL
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999)
         OR ("ee_accesscontrol"."organization_member_id" IS NULL
             AND "ee_accesscontrol"."resource" = 'action'
             AND "ee_accesscontrol"."resource_id" IS NOT NULL
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999)
         OR ("insights_organizationmembership"."user_id" = 99999
             AND "ee_accesscontrol"."resource" = 'action'
             AND "ee_accesscontrol"."resource_id" IS NOT NULL
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999))
  '''
# ---
# name: TestActionApi.test_listing_actions_is_not_nplus1.14
  '''
  SELECT "insights_organizationmembership"."id",
         "insights_organizationmembership"."organization_id",
         "insights_organizationmembership"."user_id",
         "insights_organizationmembership"."level",
         "insights_organizationmembership"."joined_at",
         "insights_organizationmembership"."updated_at",
         "insights_organizationmembership"."invited_by_id",
         "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."is_ai_training_opted_in",
         "insights_organization"."is_ai_training_locked",
         "insights_organization"."is_ai_training_cta_shown",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."is_pending_deletion",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_organizationmembership"
  INNER JOIN "insights_organization" ON ("insights_organizationmembership"."organization_id" = "insights_organization"."id")
  WHERE "insights_organizationmembership"."user_id" = 99999
  '''
# ---
# name: TestActionApi.test_listing_actions_is_not_nplus1.15
  '''
  SELECT "insights_action"."id",
         "insights_action"."name",
         "insights_action"."description",
         "insights_action"."team_id",
         "insights_action"."project_id",
         "insights_action"."created_at",
         "insights_action"."created_by_id",
         "insights_action"."deleted",
         "insights_action"."post_to_slack",
         "insights_action"."slack_message_format",
         "insights_action"."updated_at",
         "insights_action"."bytecode",
         "insights_action"."bytecode_error",
         "insights_action"."steps_json",
         "insights_action"."pinned_at",
         "insights_action"."summary",
         "insights_action"."last_summarized_at",
         "insights_action"."embedding_last_synced_at",
         "insights_action"."embedding_version",
         "insights_action"."is_calculating",
         "insights_action"."last_calculated_at",
         COUNT("insights_action_events"."event_id") AS "count",
         "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."credentials_reviewed_at",
         "insights_user"."requested_password_reset_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."mascot_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."hide_mcp_hints",
         "insights_user"."onboarding_skipped_at",
         "insights_user"."onboarding_skipped_reason",
         "insights_user"."onboarding_skipped_organization_id",
         "insights_user"."onboarding_delegated_to_invite_id",
         "insights_user"."onboarding_delegated_to_organization_id",
         "insights_user"."onboarding_delegation_accepted_at",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in"
  FROM "insights_action"
  LEFT OUTER JOIN "insights_action_events" ON ("insights_action"."id" = "insights_action_events"."action_id")
  INNER JOIN "insights_team" ON ("insights_action"."team_id" = "insights_team"."id")
  LEFT OUTER JOIN "insights_user" ON ("insights_action"."created_by_id" = "insights_user"."id")
  WHERE (NOT "insights_action"."deleted"
         AND ("insights_action"."team_id" =
                (SELECT U0."parent_team_id" AS "parent_team_id"
                 FROM "insights_team" U0
                 WHERE U0."id" = 99999
                 LIMIT 1)
              OR ("insights_team"."parent_team_id" IS NULL
                  AND "insights_action"."team_id" = 99999))
         AND "insights_team"."project_id" = 99999)
  GROUP BY "insights_action"."id",
           "insights_user"."id"
  ORDER BY "insights_action"."last_calculated_at" DESC,
           "insights_action"."name" ASC
  '''
# ---
# name: TestActionApi.test_listing_actions_is_not_nplus1.16
  '''
  SELECT "insights_taggeditem"."id",
         "insights_taggeditem"."tag_id",
         "insights_taggeditem"."dashboard_id",
         "insights_taggeditem"."insight_id",
         "insights_taggeditem"."event_definition_id",
         "insights_taggeditem"."property_definition_id",
         "insights_taggeditem"."action_id",
         "insights_taggeditem"."feature_flag_id",
         "insights_taggeditem"."experiment_saved_metric_id",
         "insights_taggeditem"."ticket_id",
         "insights_tag"."id",
         "insights_tag"."name",
         "insights_tag"."team_id"
  FROM "insights_taggeditem"
  INNER JOIN "insights_tag" ON ("insights_taggeditem"."tag_id" = "insights_tag"."id")
  WHERE "insights_taggeditem"."action_id" IN (1,
                                             2,
                                             3,
                                             4,
                                             5 /* ... */)
  '''
# ---
# name: TestActionApi.test_listing_actions_is_not_nplus1.17
  '''
  SELECT "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."credentials_reviewed_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."mascot_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."hide_mcp_hints",
         "insights_user"."onboarding_skipped_at",
         "insights_user"."onboarding_skipped_reason",
         "insights_user"."onboarding_skipped_organization_id",
         "insights_user"."onboarding_delegated_to_invite_id",
         "insights_user"."onboarding_delegated_to_organization_id",
         "insights_user"."onboarding_delegation_accepted_at",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in"
  FROM "insights_user"
  WHERE ("insights_user"."is_active"
         AND "insights_user"."id" = 99999)
  '''
# ---
# name: TestActionApi.test_listing_actions_is_not_nplus1.18
  '''
  SELECT "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."is_ai_training_opted_in",
         "insights_organization"."is_ai_training_locked",
         "insights_organization"."is_ai_training_cta_shown",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."is_pending_deletion",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_organization"
  WHERE "insights_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestActionApi.test_listing_actions_is_not_nplus1.19
  '''
  SELECT "insights_team"."id",
         "insights_team"."uuid",
         "insights_team"."organization_id",
         "insights_team"."parent_team_id",
         "insights_team"."project_id",
         "insights_team"."api_token",
         "insights_team"."app_urls",
         "insights_team"."name",
         "insights_team"."slack_incoming_webhook",
         "insights_team"."created_at",
         "insights_team"."updated_at",
         "insights_team"."anonymize_ips",
         "insights_team"."completed_snippet_onboarding",
         "insights_team"."has_completed_onboarding_for",
         "insights_team"."onboarding_tasks",
         "insights_team"."ingested_event",
         "insights_team"."person_processing_opt_out",
         "insights_team"."secret_api_token",
         "insights_team"."secret_api_token_backup",
         "insights_team"."session_recording_opt_in",
         "insights_team"."session_recording_sample_rate",
         "insights_team"."session_recording_minimum_duration_milliseconds",
         "insights_team"."session_recording_linked_flag",
         "insights_team"."session_recording_network_payload_capture_config",
         "insights_team"."session_recording_masking_config",
         "insights_team"."session_recording_url_trigger_config",
         "insights_team"."session_recording_url_blocklist_config",
         "insights_team"."session_recording_event_trigger_config",
         "insights_team"."session_recording_trigger_match_type_config",
         "insights_team"."session_recording_trigger_groups",
         "insights_team"."session_replay_config",
         "insights_team"."session_recording_retention_period",
         "insights_team"."conversations_enabled",
         "insights_team"."conversations_settings",
         "insights_team"."proactive_tasks_enabled",
         "insights_team"."survey_config",
         "insights_team"."surveys_opt_in",
         "insights_team"."product_tours_opt_in",
         "insights_team"."capture_console_log_opt_in",
         "insights_team"."capture_performance_opt_in",
         "insights_team"."capture_dead_clicks",
         "insights_team"."autocapture_opt_out",
         "insights_team"."autocapture_web_vitals_opt_in",
         "insights_team"."autocapture_web_vitals_allowed_metrics",
         "insights_team"."autocapture_exceptions_opt_in",
         "insights_team"."autocapture_exceptions_errors_to_ignore",
         "insights_team"."logs_settings",
         "insights_team"."heatmaps_opt_in",
         "insights_team"."receive_org_level_activity_logs",
         "insights_team"."web_analytics_pre_aggregated_tables_enabled",
         "insights_team"."web_analytics_pre_aggregated_tables_version",
         "insights_team"."flags_persistence_default",
         "insights_team"."feature_flag_confirmation_enabled",
         "insights_team"."feature_flag_confirmation_message",
         "insights_team"."default_evaluation_environments_enabled",
         "insights_team"."require_evaluation_environment_tags",
         "insights_team"."default_evaluation_contexts_enabled",
         "insights_team"."require_evaluation_contexts",
         "insights_team"."session_recording_version",
         "insights_team"."signup_token",
         "insights_team"."is_demo",
         "insights_team"."access_control",
         "insights_team"."week_start_day",
         "insights_team"."inject_web_apps",
         "insights_team"."test_account_filters",
         "insights_team"."test_account_filters_default_checked",
         "insights_team"."path_cleaning_filters",
         "insights_team"."timezone",
         "insights_team"."data_attributes",
         "insights_team"."person_display_name_properties",
         "insights_team"."live_events_columns",
         "insights_team"."recording_domains",
         "insights_team"."human_friendly_comparison_periods",
         "insights_team"."cookieless_server_hash_mode",
         "insights_team"."primary_dashboard_id",
         "insights_team"."default_data_theme",
         "insights_team"."extra_settings",
         "insights_team"."modifiers",
         "insights_team"."correlation_config",
         "insights_team"."session_recording_retention_period_days",
         "insights_team"."external_data_workspace_id",
         "insights_team"."external_data_workspace_last_synced_at",
         "insights_team"."api_query_rate_limit",
         "insights_team"."drop_events_older_than",
         "insights_team"."base_currency",
         "insights_team"."experiment_recalculation_time",
         "insights_team"."default_experiment_confidence_level",
         "insights_team"."default_experiment_stats_method",
         "insights_team"."business_model",
         "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."is_ai_training_opted_in",
         "insights_organization"."is_ai_training_locked",
         "insights_organization"."is_ai_training_cta_shown",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."is_pending_deletion",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_team"
  INNER JOIN "insights_organization" ON ("insights_team"."organization_id" = "insights_organization"."id")
  WHERE "insights_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestActionApi.test_listing_actions_is_not_nplus1.2
  '''
  SELECT "insights_team"."id",
         "insights_team"."uuid",
         "insights_team"."organization_id",
         "insights_team"."parent_team_id",
         "insights_team"."project_id",
         "insights_team"."api_token",
         "insights_team"."app_urls",
         "insights_team"."name",
         "insights_team"."slack_incoming_webhook",
         "insights_team"."created_at",
         "insights_team"."updated_at",
         "insights_team"."anonymize_ips",
         "insights_team"."completed_snippet_onboarding",
         "insights_team"."has_completed_onboarding_for",
         "insights_team"."onboarding_tasks",
         "insights_team"."ingested_event",
         "insights_team"."person_processing_opt_out",
         "insights_team"."secret_api_token",
         "insights_team"."secret_api_token_backup",
         "insights_team"."session_recording_opt_in",
         "insights_team"."session_recording_sample_rate",
         "insights_team"."session_recording_minimum_duration_milliseconds",
         "insights_team"."session_recording_linked_flag",
         "insights_team"."session_recording_network_payload_capture_config",
         "insights_team"."session_recording_masking_config",
         "insights_team"."session_recording_url_trigger_config",
         "insights_team"."session_recording_url_blocklist_config",
         "insights_team"."session_recording_event_trigger_config",
         "insights_team"."session_recording_trigger_match_type_config",
         "insights_team"."session_recording_trigger_groups",
         "insights_team"."session_replay_config",
         "insights_team"."session_recording_retention_period",
         "insights_team"."conversations_enabled",
         "insights_team"."conversations_settings",
         "insights_team"."proactive_tasks_enabled",
         "insights_team"."survey_config",
         "insights_team"."surveys_opt_in",
         "insights_team"."product_tours_opt_in",
         "insights_team"."capture_console_log_opt_in",
         "insights_team"."capture_performance_opt_in",
         "insights_team"."capture_dead_clicks",
         "insights_team"."autocapture_opt_out",
         "insights_team"."autocapture_web_vitals_opt_in",
         "insights_team"."autocapture_web_vitals_allowed_metrics",
         "insights_team"."autocapture_exceptions_opt_in",
         "insights_team"."autocapture_exceptions_errors_to_ignore",
         "insights_team"."logs_settings",
         "insights_team"."heatmaps_opt_in",
         "insights_team"."receive_org_level_activity_logs",
         "insights_team"."web_analytics_pre_aggregated_tables_enabled",
         "insights_team"."web_analytics_pre_aggregated_tables_version",
         "insights_team"."flags_persistence_default",
         "insights_team"."feature_flag_confirmation_enabled",
         "insights_team"."feature_flag_confirmation_message",
         "insights_team"."default_evaluation_environments_enabled",
         "insights_team"."require_evaluation_environment_tags",
         "insights_team"."default_evaluation_contexts_enabled",
         "insights_team"."require_evaluation_contexts",
         "insights_team"."session_recording_version",
         "insights_team"."signup_token",
         "insights_team"."is_demo",
         "insights_team"."access_control",
         "insights_team"."week_start_day",
         "insights_team"."inject_web_apps",
         "insights_team"."test_account_filters",
         "insights_team"."test_account_filters_default_checked",
         "insights_team"."path_cleaning_filters",
         "insights_team"."timezone",
         "insights_team"."data_attributes",
         "insights_team"."person_display_name_properties",
         "insights_team"."live_events_columns",
         "insights_team"."recording_domains",
         "insights_team"."human_friendly_comparison_periods",
         "insights_team"."cookieless_server_hash_mode",
         "insights_team"."primary_dashboard_id",
         "insights_team"."default_data_theme",
         "insights_team"."extra_settings",
         "insights_team"."modifiers",
         "insights_team"."correlation_config",
         "insights_team"."session_recording_retention_period_days",
         "insights_team"."external_data_workspace_id",
         "insights_team"."external_data_workspace_last_synced_at",
         "insights_team"."api_query_rate_limit",
         "insights_team"."drop_events_older_than",
         "insights_team"."base_currency",
         "insights_team"."experiment_recalculation_time",
         "insights_team"."default_experiment_confidence_level",
         "insights_team"."default_experiment_stats_method",
         "insights_team"."business_model",
         "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."is_ai_training_opted_in",
         "insights_organization"."is_ai_training_locked",
         "insights_organization"."is_ai_training_cta_shown",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."is_pending_deletion",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_team"
  INNER JOIN "insights_organization" ON ("insights_team"."organization_id" = "insights_organization"."id")
  WHERE "insights_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestActionApi.test_listing_actions_is_not_nplus1.20
  '''
  SELECT "insights_project"."id",
         "insights_project"."organization_id",
         "insights_project"."name",
         "insights_project"."created_at",
         "insights_project"."product_description"
  FROM "insights_project"
  WHERE "insights_project"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestActionApi.test_listing_actions_is_not_nplus1.21
  '''
  SELECT "insights_organizationmembership"."id",
         "insights_organizationmembership"."organization_id",
         "insights_organizationmembership"."user_id",
         "insights_organizationmembership"."level",
         "insights_organizationmembership"."joined_at",
         "insights_organizationmembership"."updated_at",
         "insights_organizationmembership"."invited_by_id",
         "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."is_ai_training_opted_in",
         "insights_organization"."is_ai_training_locked",
         "insights_organization"."is_ai_training_cta_shown",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."is_pending_deletion",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_organizationmembership"
  INNER JOIN "insights_organization" ON ("insights_organizationmembership"."organization_id" = "insights_organization"."id")
  WHERE ("insights_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "insights_organizationmembership"."user_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestActionApi.test_listing_actions_is_not_nplus1.22
  '''
  SELECT "ee_accesscontrol"."id",
         "ee_accesscontrol"."team_id",
         "ee_accesscontrol"."access_level",
         "ee_accesscontrol"."resource",
         "ee_accesscontrol"."resource_id",
         "ee_accesscontrol"."organization_member_id",
         "ee_accesscontrol"."role_id",
         "ee_accesscontrol"."created_by_id",
         "ee_accesscontrol"."created_at",
         "ee_accesscontrol"."updated_at"
  FROM "ee_accesscontrol"
  LEFT OUTER JOIN "insights_organizationmembership" ON ("ee_accesscontrol"."organization_member_id" = "insights_organizationmembership"."id")
  WHERE (("ee_accesscontrol"."organization_member_id" IS NULL
          AND "ee_accesscontrol"."resource" = 'project'
          AND "ee_accesscontrol"."resource_id" = '99999'
          AND "ee_accesscontrol"."role_id" IS NULL
          AND "ee_accesscontrol"."team_id" = 99999)
         OR ("insights_organizationmembership"."user_id" = 99999
             AND "ee_accesscontrol"."resource" = 'project'
             AND "ee_accesscontrol"."resource_id" = '99999'
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999)
         OR ("ee_accesscontrol"."organization_member_id" IS NULL
             AND "ee_accesscontrol"."resource" = 'action'
             AND "ee_accesscontrol"."resource_id" IS NULL
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999)
         OR ("insights_organizationmembership"."user_id" = 99999
             AND "ee_accesscontrol"."resource" = 'action'
             AND "ee_accesscontrol"."resource_id" IS NULL
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999)
         OR ("ee_accesscontrol"."organization_member_id" IS NULL
             AND "ee_accesscontrol"."resource" = 'action'
             AND "ee_accesscontrol"."resource_id" IS NOT NULL
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999)
         OR ("insights_organizationmembership"."user_id" = 99999
             AND "ee_accesscontrol"."resource" = 'action'
             AND "ee_accesscontrol"."resource_id" IS NOT NULL
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999))
  '''
# ---
# name: TestActionApi.test_listing_actions_is_not_nplus1.23
  '''
  SELECT "insights_organizationmembership"."id",
         "insights_organizationmembership"."organization_id",
         "insights_organizationmembership"."user_id",
         "insights_organizationmembership"."level",
         "insights_organizationmembership"."joined_at",
         "insights_organizationmembership"."updated_at",
         "insights_organizationmembership"."invited_by_id",
         "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."is_ai_training_opted_in",
         "insights_organization"."is_ai_training_locked",
         "insights_organization"."is_ai_training_cta_shown",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."is_pending_deletion",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_organizationmembership"
  INNER JOIN "insights_organization" ON ("insights_organizationmembership"."organization_id" = "insights_organization"."id")
  WHERE "insights_organizationmembership"."user_id" = 99999
  '''
# ---
# name: TestActionApi.test_listing_actions_is_not_nplus1.24
  '''
  SELECT "insights_action"."id",
         "insights_action"."name",
         "insights_action"."description",
         "insights_action"."team_id",
         "insights_action"."project_id",
         "insights_action"."created_at",
         "insights_action"."created_by_id",
         "insights_action"."deleted",
         "insights_action"."post_to_slack",
         "insights_action"."slack_message_format",
         "insights_action"."updated_at",
         "insights_action"."bytecode",
         "insights_action"."bytecode_error",
         "insights_action"."steps_json",
         "insights_action"."pinned_at",
         "insights_action"."summary",
         "insights_action"."last_summarized_at",
         "insights_action"."embedding_last_synced_at",
         "insights_action"."embedding_version",
         "insights_action"."is_calculating",
         "insights_action"."last_calculated_at",
         COUNT("insights_action_events"."event_id") AS "count",
         "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."credentials_reviewed_at",
         "insights_user"."requested_password_reset_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."mascot_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."hide_mcp_hints",
         "insights_user"."onboarding_skipped_at",
         "insights_user"."onboarding_skipped_reason",
         "insights_user"."onboarding_skipped_organization_id",
         "insights_user"."onboarding_delegated_to_invite_id",
         "insights_user"."onboarding_delegated_to_organization_id",
         "insights_user"."onboarding_delegation_accepted_at",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in"
  FROM "insights_action"
  LEFT OUTER JOIN "insights_action_events" ON ("insights_action"."id" = "insights_action_events"."action_id")
  INNER JOIN "insights_team" ON ("insights_action"."team_id" = "insights_team"."id")
  LEFT OUTER JOIN "insights_user" ON ("insights_action"."created_by_id" = "insights_user"."id")
  WHERE (NOT "insights_action"."deleted"
         AND ("insights_action"."team_id" =
                (SELECT U0."parent_team_id" AS "parent_team_id"
                 FROM "insights_team" U0
                 WHERE U0."id" = 99999
                 LIMIT 1)
              OR ("insights_team"."parent_team_id" IS NULL
                  AND "insights_action"."team_id" = 99999))
         AND "insights_team"."project_id" = 99999)
  GROUP BY "insights_action"."id",
           "insights_user"."id"
  ORDER BY "insights_action"."last_calculated_at" DESC,
           "insights_action"."name" ASC
  '''
# ---
# name: TestActionApi.test_listing_actions_is_not_nplus1.25
  '''
  SELECT "insights_taggeditem"."id",
         "insights_taggeditem"."tag_id",
         "insights_taggeditem"."dashboard_id",
         "insights_taggeditem"."insight_id",
         "insights_taggeditem"."event_definition_id",
         "insights_taggeditem"."property_definition_id",
         "insights_taggeditem"."action_id",
         "insights_taggeditem"."feature_flag_id",
         "insights_taggeditem"."experiment_saved_metric_id",
         "insights_taggeditem"."ticket_id",
         "insights_tag"."id",
         "insights_tag"."name",
         "insights_tag"."team_id"
  FROM "insights_taggeditem"
  INNER JOIN "insights_tag" ON ("insights_taggeditem"."tag_id" = "insights_tag"."id")
  WHERE "insights_taggeditem"."action_id" IN (1,
                                             2,
                                             3,
                                             4,
                                             5 /* ... */)
  '''
# ---
# name: TestActionApi.test_listing_actions_is_not_nplus1.3
  '''
  SELECT "insights_project"."id",
         "insights_project"."organization_id",
         "insights_project"."name",
         "insights_project"."created_at",
         "insights_project"."product_description"
  FROM "insights_project"
  WHERE "insights_project"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestActionApi.test_listing_actions_is_not_nplus1.4
  '''
  SELECT "insights_organizationmembership"."id",
         "insights_organizationmembership"."organization_id",
         "insights_organizationmembership"."user_id",
         "insights_organizationmembership"."level",
         "insights_organizationmembership"."joined_at",
         "insights_organizationmembership"."updated_at",
         "insights_organizationmembership"."invited_by_id",
         "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."is_ai_training_opted_in",
         "insights_organization"."is_ai_training_locked",
         "insights_organization"."is_ai_training_cta_shown",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."is_pending_deletion",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_organizationmembership"
  INNER JOIN "insights_organization" ON ("insights_organizationmembership"."organization_id" = "insights_organization"."id")
  WHERE ("insights_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "insights_organizationmembership"."user_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestActionApi.test_listing_actions_is_not_nplus1.5
  '''
  SELECT "ee_accesscontrol"."id",
         "ee_accesscontrol"."team_id",
         "ee_accesscontrol"."access_level",
         "ee_accesscontrol"."resource",
         "ee_accesscontrol"."resource_id",
         "ee_accesscontrol"."organization_member_id",
         "ee_accesscontrol"."role_id",
         "ee_accesscontrol"."created_by_id",
         "ee_accesscontrol"."created_at",
         "ee_accesscontrol"."updated_at"
  FROM "ee_accesscontrol"
  LEFT OUTER JOIN "insights_organizationmembership" ON ("ee_accesscontrol"."organization_member_id" = "insights_organizationmembership"."id")
  WHERE (("ee_accesscontrol"."organization_member_id" IS NULL
          AND "ee_accesscontrol"."resource" = 'project'
          AND "ee_accesscontrol"."resource_id" = '99999'
          AND "ee_accesscontrol"."role_id" IS NULL
          AND "ee_accesscontrol"."team_id" = 99999)
         OR ("insights_organizationmembership"."user_id" = 99999
             AND "ee_accesscontrol"."resource" = 'project'
             AND "ee_accesscontrol"."resource_id" = '99999'
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999)
         OR ("ee_accesscontrol"."organization_member_id" IS NULL
             AND "ee_accesscontrol"."resource" = 'action'
             AND "ee_accesscontrol"."resource_id" IS NULL
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999)
         OR ("insights_organizationmembership"."user_id" = 99999
             AND "ee_accesscontrol"."resource" = 'action'
             AND "ee_accesscontrol"."resource_id" IS NULL
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999)
         OR ("ee_accesscontrol"."organization_member_id" IS NULL
             AND "ee_accesscontrol"."resource" = 'action'
             AND "ee_accesscontrol"."resource_id" IS NOT NULL
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999)
         OR ("insights_organizationmembership"."user_id" = 99999
             AND "ee_accesscontrol"."resource" = 'action'
             AND "ee_accesscontrol"."resource_id" IS NOT NULL
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999))
  '''
# ---
# name: TestActionApi.test_listing_actions_is_not_nplus1.6
  '''
  SELECT "insights_organizationmembership"."id",
         "insights_organizationmembership"."organization_id",
         "insights_organizationmembership"."user_id",
         "insights_organizationmembership"."level",
         "insights_organizationmembership"."joined_at",
         "insights_organizationmembership"."updated_at",
         "insights_organizationmembership"."invited_by_id",
         "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."is_ai_training_opted_in",
         "insights_organization"."is_ai_training_locked",
         "insights_organization"."is_ai_training_cta_shown",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."is_pending_deletion",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_organizationmembership"
  INNER JOIN "insights_organization" ON ("insights_organizationmembership"."organization_id" = "insights_organization"."id")
  WHERE "insights_organizationmembership"."user_id" = 99999
  '''
# ---
# name: TestActionApi.test_listing_actions_is_not_nplus1.7
  '''
  SELECT "insights_action"."id",
         "insights_action"."name",
         "insights_action"."description",
         "insights_action"."team_id",
         "insights_action"."project_id",
         "insights_action"."created_at",
         "insights_action"."created_by_id",
         "insights_action"."deleted",
         "insights_action"."post_to_slack",
         "insights_action"."slack_message_format",
         "insights_action"."updated_at",
         "insights_action"."bytecode",
         "insights_action"."bytecode_error",
         "insights_action"."steps_json",
         "insights_action"."pinned_at",
         "insights_action"."summary",
         "insights_action"."last_summarized_at",
         "insights_action"."embedding_last_synced_at",
         "insights_action"."embedding_version",
         "insights_action"."is_calculating",
         "insights_action"."last_calculated_at",
         COUNT("insights_action_events"."event_id") AS "count",
         "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."credentials_reviewed_at",
         "insights_user"."requested_password_reset_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."mascot_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."hide_mcp_hints",
         "insights_user"."onboarding_skipped_at",
         "insights_user"."onboarding_skipped_reason",
         "insights_user"."onboarding_skipped_organization_id",
         "insights_user"."onboarding_delegated_to_invite_id",
         "insights_user"."onboarding_delegated_to_organization_id",
         "insights_user"."onboarding_delegation_accepted_at",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in"
  FROM "insights_action"
  LEFT OUTER JOIN "insights_action_events" ON ("insights_action"."id" = "insights_action_events"."action_id")
  INNER JOIN "insights_team" ON ("insights_action"."team_id" = "insights_team"."id")
  LEFT OUTER JOIN "insights_user" ON ("insights_action"."created_by_id" = "insights_user"."id")
  WHERE (NOT "insights_action"."deleted"
         AND ("insights_action"."team_id" =
                (SELECT U0."parent_team_id" AS "parent_team_id"
                 FROM "insights_team" U0
                 WHERE U0."id" = 99999
                 LIMIT 1)
              OR ("insights_team"."parent_team_id" IS NULL
                  AND "insights_action"."team_id" = 99999))
         AND "insights_team"."project_id" = 99999)
  GROUP BY "insights_action"."id",
           "insights_user"."id"
  ORDER BY "insights_action"."last_calculated_at" DESC,
           "insights_action"."name" ASC
  '''
# ---
# name: TestActionApi.test_listing_actions_is_not_nplus1.8
  '''
  SELECT "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."credentials_reviewed_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."mascot_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."hide_mcp_hints",
         "insights_user"."onboarding_skipped_at",
         "insights_user"."onboarding_skipped_reason",
         "insights_user"."onboarding_skipped_organization_id",
         "insights_user"."onboarding_delegated_to_invite_id",
         "insights_user"."onboarding_delegated_to_organization_id",
         "insights_user"."onboarding_delegation_accepted_at",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in"
  FROM "insights_user"
  WHERE ("insights_user"."is_active"
         AND "insights_user"."id" = 99999)
  '''
# ---
# name: TestActionApi.test_listing_actions_is_not_nplus1.9
  '''
  SELECT "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."is_ai_training_opted_in",
         "insights_organization"."is_ai_training_locked",
         "insights_organization"."is_ai_training_cta_shown",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."is_pending_deletion",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_organization"
  WHERE "insights_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
